refactor: Excluindo colunas da tabela permissions
