# app/Core/Http/Resources/Module/ModulePermissionResource.php
@@ -13,8 +13,6 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *      @OA\Property(property="action", type="string", example="Sample", minLength=1, maxLength=120),
  *      @OA\Property(property="name", type="string", example="Sample", minLength=1, maxLength=180),
  *      @OA\Property(property="description", type="string", example="Sample", minLength=1, maxLength=512, nullable=true),
- *      @OA\Property(property="has_access_free", type="boolean", example=false, nullable=true),
- *      @OA\Property(property="is_active", type="boolean", example=false, nullable=true)
  * )
  */
 class ModulePermissionResource extends JsonResource
@@ -25,9 +23,7 @@ class ModulePermissionResource extends JsonResource
             'resource' => $this->getAttribute('resource'),
             'action' => $this->action,
             'name' => $this->name,
-            'description' => $this->description,
-            'has_access_free' => $this->has_access_free,
-            'is_active' => $this->is_active,
+            'description' => $this->description
         ];
     }
 }
