# app/Modules/Auth/DTO/PermissionDTO.php
@@ -13,8 +13,6 @@ class PermissionDTO
         public string $action = '',
         public string $name = '',
         public ?string $description = '',
-        public ?bool $has_access_free = false,
-        public ?bool $is_active = false,
         public ?Carbon $created_at = null,
         public ?Carbon $updated_at = null,
         public ?Carbon $deleted_at = null
@@ -28,8 +26,6 @@ class PermissionDTO
             action: $data['action'] ?? '',
             name: $data['name'] ?? '',
             description: $data['description'] ?? '',
-            has_access_free: $data['has_access_free'] ?? false,
-            is_active: $data['is_active'] ?? false,
             created_at: $data['created_at'] ?? null,
             updated_at: $data['updated_at'] ?? null,
             deleted_at: $data['deleted_at'] ?? null
@@ -44,8 +40,6 @@ class PermissionDTO
             'action' => $this->action,
             'name' => $this->name,
             'description' => $this->description,
-            'has_access_free' => $this->has_access_free,
-            'is_active' => $this->is_active,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
             'deleted_at' => $this->deleted_at
