# app/Modules/Auth/Http/Resources/Permission/PermissionResource.php
@@ -13,8 +13,6 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *      @OA\Property(property="action", type="string", example="Sample", minLength=1, maxLength=120),
  *      @OA\Property(property="name", type="string", example="Sample", minLength=1, maxLength=180),
  *      @OA\Property(property="description", type="string", example="Sample", minLength=1, maxLength=512, nullable=true),
- *      @OA\Property(property="has_access_free", type="boolean", example=false, nullable=true),
- *      @OA\Property(property="is_active", type="boolean", example=false, nullable=true),
  *      @OA\Property(property="module", type="object", ref="#/components/schemas/PermissionModuleResource"),
  *      @OA\Property(property="created_at", type="string", format="date-time", example="2025-12-05T00:27:48.930766Z", nullable=true),
  *      @OA\Property(property="updated_at", type="string", format="date-time", example="2025-12-05T00:27:48.930766Z", nullable=true),
@@ -30,8 +28,6 @@ class PermissionResource extends JsonResource
             'action' => $this->action,
             'name' => $this->name,
             'description' => $this->description,
-            'has_access_free' => $this->has_access_free,
-            'is_active' => $this->is_active,
             'module' => new PermissionModuleResource($this->module),
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
