# app/Modules/Auth/Models/Permission.php
@@ -17,8 +17,6 @@ use Illuminate\Database\Eloquent\SoftDeletes;
  *      @OA\Property(property="action", type="string", example="Sample"),
  *      @OA\Property(property="name", type="string", example="Sample"),
  *      @OA\Property(property="description", type="string", example="Sample", nullable=true),
- *      @OA\Property(property="has_access_free", type="boolean", example=false, nullable=true),
- *      @OA\Property(property="is_active", type="boolean", example=false, nullable=true),
  *      @OA\Property(property="created_at", type="string", format="date-time", example="2025-12-05T00:27:48.633261Z", nullable=true),
  *      @OA\Property(property="updated_at", type="string", format="date-time", example="2025-12-05T00:27:48.633261Z", nullable=true),
  *      @OA\Property(property="deleted_at", type="string", format="date-time", example="2025-12-05T00:27:48.633261Z", nullable=true)
@@ -33,14 +31,11 @@ class Permission extends Model
         'resource',
         'action',
         'name',
-        'description',
-        'has_access_free',
-        'is_active'
+        'description'
     ];
 
     protected $casts = [
-        'has_access_free' => 'boolean',
-        'is_active' => 'boolean'
+        
     ];
 
     public function module(): BelongsTo {
